--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -492,6 +492,26 @@ footer p {color: white;}
         
 }
 
+@media screen and (max-width: 1024px) {
+    .tellepon{
+    margin-right:800px ;
+    font-size: medium;
+    color: #056146;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+        
+}
+}
+@media screen and (max-width: 768px) {
+    .tellepon{
+    margin-right:400px ;
+    font-size: medium;
+    color: #056146;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+        
+}
+}
+
+
 .icone{
     display: flex;
     margin-left: 60px;
